com.github.spheras.desktopfolder (1.0.2) precise; urgency=low

   * Deleting Last Panel bugfixing
   * DESKTOP window types (workspace movement improvement and others)
   * Drag and Drop folders (recursive copy)
   * Improved Notes
   * Minor Bugfixing

-- José Amuedo <joseamuedo@gmail.com>  Thu, 19 Oct 2017 18:32:00 -0500

com.github.spheras.desktopfolder (1.0.1) precise; urgency=low

   * Show Desktop shortcut bugfix.

-- José Amuedo <joseamuedo@gmail.com>  Fri, 13 Oct 2017 16:48:00 -0500

com.github.spheras.desktopfolder (1.0.0) precise; urgency=low

  * Initial Release.

 -- José Amuedo <joseamuedo@gmail.com>  Sat, 8 Jul 2017 01:12:10 -0500