@@ -28,10 +28,14 @@
 @define-color colorForegroundHEADLESS rgba(0,0,0,0);
 .df_folder.df_light .titlebar .title{
     color: @colorForegroundLIGHT;
+}
+.df_folder.df_light.df_shadow .titlebar .title{
     text-shadow: 0 0 2px rgba(0,0,0,0.3), 0 1px 2px rgba(0,0,0,0.6);
 }
 .df_folder.df_dark .titlebar .title{
     color: @colorForegroundDARK;
+}
+.df_folder.df_dark.df_shadow .titlebar .title{
     text-shadow: 0 0 2px rgba(255,255,255,0.3), 0 1px rgba(255,255,255,0.25);
 }
 .df_folder.df_headless .titlebar .title{
@@ -312,24 +316,37 @@ padding-bottom:0px;
 
 .df_icon, .df_label{
     color:white;
-    /*font-weight:bold;*/
+    font-weight: normal;
+}
+
+.df_folder.df_bold .df_label{
+    font-weight: bold;
 }
 
 .df_folder.df_dark .df_item.df_selected .df_icon, .df_folder.df_dark .df_item.df_selected .df_label{
     color: @colorForegroundLIGHT;
-    text-shadow: 0 0 2px rgba(0,0,0,0.3), 0 1px 2px rgba(0,0,0,0.6);
 }
 
 .df_folder.df_light .df_icon, .df_folder.df_light .df_label{
     color: @colorForegroundLIGHT;
+    text-shadow: none;
+}
+.df_folder.df_light.df_shadow .df_icon, .df_folder.df_light.df_shadow .df_label{
     text-shadow: 0 0 2px rgba(0,0,0,0.3), 0 1px 2px rgba(0,0,0,0.6);
 }
+
 .df_folder.df_dark .df_icon, .df_folder.df_dark .df_label{
     color: rgba(0,0,0,0.75);
+    text-shadow: none;
+}
+.df_folder.df_dark.df_shadow .df_icon, .df_folder.df_dark.df_shadow .df_label{
     text-shadow: 0 0 2px rgba(255,255,255,0.3), 0 1px rgba(255,255,255,0.25);
 }
 .df_folder.df_headless .df_icon, .df_folder.df_headless .df_label{
     color: @colorForegroundLIGHT;
+    text-shadow: none;
+}
+.df_folder.df_headless.df_shadow .df_icon, .df_folder.df_headless.df_shadow .df_label{
     text-shadow: 0 0 2px rgba(0,0,0,0.3), 0 1px 2px rgba(0,0,0,0.6);
 }
 
