@@ -29,6 +29,8 @@ public class DesktopFolder.FolderSettings: Object{
     public string name { get; set; }
     public string bgcolor { get; set; }
     public string fgcolor { get; set; }
+    public bool textbold { get; set; }
+    public bool textshadow {get; set; }
     public string[] items { get; set; default = new string[0]; }
     //default json seralization implementation only support primitive types
 
@@ -53,6 +55,8 @@ public class DesktopFolder.FolderSettings: Object{
         this.h=300;
         this.bgcolor="df_black";
         this.fgcolor="df_light";
+        this.textbold=true;
+        this.textshadow=true;
         this.name=name;
         this.items=new string[0];
     }
